# bspp

./: .editorconfig  .gitattributes  .gitignore  .pylint  Makefile  Pipfile  README.md  bspp.py  pyproject.toml  q3dm1 - Selection.txt  requirements-dev.txt
.github/workflows/: build.yml
bspp/: __init__.py  bspp.py  hash.py  model.py  out_plain_text.py  pk3hash.py  postprocess.py
samples/: cpu1b2.pk3  mIKEctf2.pk3  map_cpm12.pk3  pukka3tourney5.bsp  pukka3tourney5.pk3  q3ctf2.bsp  ra3map11.pk3  th_after11x.pk3
tests/: __init__.py  test_bspp.py
tests/resources/: finkota4.pk3  j-1.pk3  vrmpack.pk3
